# agent-metrics

./: .gitignore  AGENTS.md  CHANGELOG.md  NOTES.md  README.md  pyproject.toml
.agent-metrics/contracts/: 0001_initial_milestone.md  0002_health_command.md  0003_jsonl_schemas.md  0004_otel_alignment.md  0005_api_surface_cleanup.md  0006_release_flow_and_bump_policy.md  0007_review_retro_guardrails.md  0008_contract_command.md  0009_settle_command.md  0010_audit_command.md  0011_ci_health_snapshot.md
.github/scripts/: gen_index.py
.github/workflows/: publish.yml  tests.yml
docs/: api-conventions.md  releasing.md  review-checklist.md  schemas.md
metrics/contracts/: 0001_initial_milestone.md
scripts/: review.py
src/agent_metrics/: __init__.py  cli.py  contracts.py  errors.py  health.py  provenance.py
src/agent_metrics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_contracts.py  test_health.py  test_invariants.py  test_provenance.py  test_workflows.py
