[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-metrics"
version = "0.1.0"
description = "Lightweight, serverless metrics toolkit for agent and knowledge repos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
agent-metrics = "agent_metrics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--cov=agent_metrics",
  "--cov-report=term-missing",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agent_metrics"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "C90",
  "UP",
  "B",
  "SIM",
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 8
